Fix some spellings

--- a/volumio/etc/modprobe.d/alsa-base.conf
+++ b/volumio/etc/modprobe.d/alsa-base.conf
@@ -11,9 +11,9 @@ install sound-slot-7 /sbin/modprobe snd-card-7
 install snd /sbin/modprobe --ignore-install snd && { /sbin/modprobe --quiet snd-ioctl32 ; /sbin/modprobe --quiet snd-seq ; : ; }
 install snd-rawmidi /sbin/modprobe --ignore-install snd-rawmidi && { /sbin/modprobe --quiet snd-seq-midi ; : ; }
 install snd-emu10k1 /sbin/modprobe --ignore-install snd-emu10k1 && { /sbin/modprobe --quiet snd-emu10k1-synth ; : ; }
-# Keep snd-pcsp from beeing loaded as first soundcard
+# Keep snd-pcsp from being loaded as first soundcard
 options snd-pcsp index=-2
-# Keep snd-usb-audio from beeing loaded as first soundcard
+# Keep snd-usb-audio from being loaded as first soundcard
 #options snd-usb-audio index=-2
 # Prevent abnormal drivers from grabbing index 0
 options bt87x index=-2
